# FlowLang

./: .gitignore  Cargo.toml  README.md  arch.md  flowlang.md  mine.flow  package-manager.md  test_concurrency.flow  verify_concurrency.js
docs/: IMPORT_SYNTAX.md  README.md  error-arc.md  examples.md  stdlib.md  syntax.md  types.md
examples/: async.flow  attempt_rescue_demo.flow  attempt_rescue_simple.flow  cli_args_demo.flow  cli_demo.flow  color_demo.flow  concurrent_server.flow  constellation_demo.flow  control_flow_test.flow  error_arc_complete.flow  error_arc_demo.flow  error_rift_test.flow  error_ultimate_test.flow  event_loop_test.flow  foreach_demo.flow  full_demo.flow  hello.flow  http_demo.flow  http_server.flow  net_demo.flow  panic_test.flow  path_test.flow  process_git_test.flow  response_test.flow  rest_api.flow  sample.flow  sigil_test.flow  simple_loop_test.flow  stdlib_demo.flow  stdlib_simple.flow  stdlib_test.flow  test.flow  timer_demo.flow  timer_tick_test.flow  ward_rebound_test.flow  web_server_complete.flow
extension/: .vscodeignore  flowlang-1.0.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
myapp/: config.flowlang.json
scripts/: test_api.ps1
src/: config.rs  main.rs  package_manager.rs  repl.rs
tests/: arc_migration_test.flow  array_methods_test.flow  circular_dep_test.flow  color_fixed_test.flow  comprehensive_test.flow  controlflow.flow  crypto_test.flow  double_quote.flow  foreach_test.flow  import_alias_test.flow  inline_spell_test.flow  memory_safety_test.flow  mixed_import_test.flow  (+14 more)
(+127 files in other folders)
