[package]
name = "flowlang"
version = "1.0.0"
edition = "2021"
authors = ["FlowLang Team"]
description = "A mystical anime-themed scripting language VM"

[[bin]]
name = "flowlang"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.21"
warp = "0.3"
hyper = "0.14"
bincode = "1.3"
hex = "0.4.3"

[dev-dependencies]
